--- a/helm/nvidia-cloudwatch/values.yaml
+++ b/helm/nvidia-cloudwatch/values.yaml
@@ -4,6 +4,8 @@ aws: {}
 # region: us-east-1
 # accessKeyId: xxxx
 # secretAccessKey: xxxx
+period: 60
+resolution: 60
 
 image:
   repository: calebpalmer/nvidia-cloudwatch
