--- a/helm/nvidia-cloudwatch/values.yaml
+++ b/helm/nvidia-cloudwatch/values.yaml
@@ -10,6 +10,7 @@ resolution: 60
 image:
   repository: calebpalmer/nvidia-cloudwatch
   pullPolicy: IfNotPresent
+  tag: latest
 
 imagePullSecrets: []
 nameOverride: ""
